--- a/style.css
+++ b/style.css
@@ -21,11 +21,11 @@ body{
     background-color: var(--clr-bg);
 }
 
-.card__container{
-    width: 280px;
-    height: 420px;
+.main{
+    width: 320px;
+    /* height: 420px; */
     box-shadow: 0px 10px 25px -7px rgba(0,0,0,0.1);
-    padding: .85rem;
+    padding: 1rem;
     background-color: var(--clr-card);
     border-radius: 10px;
 }
@@ -50,7 +50,7 @@ img{
 }
 
 .text__content{
-    padding: .75rem;
+    padding: 1rem;
     text-align: center;
 }
 
