--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body{
     background-color: var(--clr-bg);
 }
 
-.main{
+main{
     width: 320px;
     /* height: 420px; */
     box-shadow: 0px 10px 25px -7px rgba(0,0,0,0.1);
